[gd_scene load_steps=4 format=3 uid="uid://bbf7rauxpqwti"]

[ext_resource type="Script" path="res://src/mapping_engine/beatmap_maker.gd" id="1_3v2b7"]
[ext_resource type="Texture2D" uid="uid://c2v8nak1xnxnn" path="res://assets/textures/notes/icon.svg" id="1_j8k14"]
[ext_resource type="Script" path="res://src/mapping_engine/note_timeline.gd" id="3_h0tb7"]

[node name="beatmap_maker" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3v2b7")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_top = 100.0
offset_right = 1153.0
offset_bottom = 348.0
horizontal_scroll_mode = 2

[node name="NoteTimeline" type="TextureRect" parent="ScrollContainer" node_paths=PackedStringArray("beatmap_maker")]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_j8k14")
script = ExtResource("3_h0tb7")
beatmap_maker = NodePath("../..")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Length of song in seconds: "

[node name="SongLengthLineEdit" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Number of measure subdivisions:  "

[node name="MeasureSubdivisionLineEdit" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Beats per minute:  "

[node name="BPMLineEdit" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2

[node name="TimeSignatureManager" type="Control" parent="."]
anchors_preset = 0
offset_left = 870.0
offset_right = 910.0
offset_bottom = 40.0

[node name="Label4" type="Label" parent="TimeSignatureManager"]
layout_mode = 2
offset_right = 117.0
offset_bottom = 26.0
text = "Time Signature:"

[node name="VBoxContainer" type="VBoxContainer" parent="TimeSignatureManager"]
layout_mode = 0
offset_left = 125.0
offset_right = 192.0
offset_bottom = 66.0

[node name="NumbOfNotesInMeasureLineEdit" type="LineEdit" parent="TimeSignatureManager/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TimeSignatureManager/VBoxContainer"]
layout_mode = 2
text = "-------------"

[node name="NoteValueLineEdit" type="LineEdit" parent="TimeSignatureManager/VBoxContainer"]
layout_mode = 2

[node name="ExportButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -130.0
offset_top = -47.0
grow_horizontal = 0
grow_vertical = 0
text = "Export"

[node name="TestButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -46.0
offset_right = 178.0
grow_vertical = 0
text = "Test Beatmap"

[connection signal="text_changed" from="HBoxContainer/SongLengthLineEdit" to="." method="_on_song_length_line_edit_text_changed"]
[connection signal="text_changed" from="HBoxContainer/MeasureSubdivisionLineEdit" to="." method="_on_measure_subdivision_line_edit_text_changed"]
[connection signal="text_changed" from="HBoxContainer/BPMLineEdit" to="." method="_on_bpm_line_edit_text_changed"]
[connection signal="text_changed" from="TimeSignatureManager/VBoxContainer/NumbOfNotesInMeasureLineEdit" to="." method="_on_number_of_notes_in_measure_text_changed"]
[connection signal="text_changed" from="TimeSignatureManager/VBoxContainer/NoteValueLineEdit" to="." method="_on_note_value_text_changed"]
[connection signal="button_down" from="ExportButton" to="." method="_on_export_button_button_down"]
[connection signal="button_down" from="TestButton" to="." method="_on_test_button_button_down"]
